# wiggum-report

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TASKS.md  TASKS_original.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: content_optimizer.py  data_persistence.py  github_client.py  logging_config.py  metadata_collector.py  scheduler.py
src/config/: settings.py
src/scripts/: templates.py
src/social_platforms/: adapter.py  linkedin_adapter.py  x_adapter.py
test_data/reports/: wiggum_report_2026-03-01.md
tests/: test_config.py  test_content_optimizer.py  test_data_persistence.py  test_github_client.py  test_logging_config.py  test_metadata_collector.py  test_scheduler.py  test_social_platforms.py  test_templates.py
