[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']
exclude = [
    '.git',
    '__pycache__',
    'build',
    'dist',
    '*.egg-info',
    'venv',
    'env'
]

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_backend'
