[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.flake8]
max-line-length = 88
extend-ignore = ['E203', 'W503']
exclude = [
    '.git',
    '__pycache__',
    'build',
    'dist',
    '*.egg-info',
    'venv',
    'env'
]

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_backend'

[project]
name = "wiggum-report"
version = "0.1.0"
description = "Automated weekly report generator for GitHub repositories"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["src"]
